remove dto
