# backend/src/main/java/com/odde/doughnut/controllers/dto/NotebooksViewedByUser.java
@@ -1,10 +1,11 @@
 package com.odde.doughnut.controllers.dto;
 
+import com.odde.doughnut.entities.Notebook;
 import com.odde.doughnut.entities.Subscription;
 import jakarta.validation.constraints.NotNull;
 import java.util.List;
 
 public class NotebooksViewedByUser {
-  @NotNull public List<NotebookViewedByUser> notebooks;
+  @NotNull public List<Notebook> notebooks;
   public List<Subscription> subscriptions;
 }
