# backend/src/main/java/com/odde/doughnut/models/JsonViewer.java
@@ -1,31 +1,19 @@
 package com.odde.doughnut.models;
 
 import com.odde.doughnut.controllers.dto.CircleForUserView;
-import com.odde.doughnut.controllers.dto.NotebookViewedByUser;
 import com.odde.doughnut.controllers.dto.NotebooksViewedByUser;
 import com.odde.doughnut.controllers.dto.UserForOtherUserView;
 import com.odde.doughnut.entities.Circle;
 import com.odde.doughnut.entities.Notebook;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class JsonViewer {
 
   public JsonViewer() {}
 
-  public NotebookViewedByUser jsonNotebookViewedByUser(Notebook notebook) {
-    NotebookViewedByUser notebookViewedByUser = new NotebookViewedByUser();
-    notebookViewedByUser.setId(notebook.getId());
-    notebookViewedByUser.setHeadNoteId(notebook.getHeadNote().getId());
-    notebookViewedByUser.setHeadNote(notebook.getHeadNote());
-    notebookViewedByUser.setSkipReviewEntirely(notebook.getSkipReviewEntirely());
-    return notebookViewedByUser;
-  }
-
   public NotebooksViewedByUser jsonNotebooksViewedByUser(List<Notebook> allNotebooks) {
     NotebooksViewedByUser notebooksViewedByUser = new NotebooksViewedByUser();
-    notebooksViewedByUser.notebooks =
-        allNotebooks.stream().map(this::jsonNotebookViewedByUser).collect(Collectors.toList());
+    notebooksViewedByUser.notebooks = allNotebooks;
     return notebooksViewedByUser;
   }
 
